# Zoom-Agentic-AI

./: .env.example  .gitignore  ARCHITECTURE.md  HANDOVER.md  PROJECT_PLAN.md  PROJECT_STATUS.md  README.md
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260601_0001_zoom_integration.py  20260601_0002_transcript_retrieval.py  20260601_0003_transcript_segments.py  20260601_0004_transcript_cleaning.py  20260601_0005_transcript_chunks.py  20260601_0006_workflow_generation.py  20260601_0007_questions_table.py
backend/app/: main.py
backend/app/agent/: schemas.py  state.py
backend/app/agent/prompts/: final_selection.md  generate_fill_blank.md  generate_mcq.md  planner.md  (+5 more)
backend/app/api/: router.py
backend/app/core/: config.py  errors.py  logging.py
backend/app/llm/: model_router.py  ollama_client.py  output_parser.py
backend/app/schemas/: common.py  meetings.py  metrics.py  processing_runs.py  questions.py  transcripts.py
backend/app/services/: chunking_service.py  ingestion_service.py  metrics_service.py  preprocessing_service.py  question_service.py  semantic_chunker.py  speaker_normalizer.py  storage_service.py  transcript_cleaner.py  transcript_cleaning_service.py  transcript_download_service.py  transcript_parse_service.py  transcript_parser.py  zoom_webhook_service.py
backend/app/utils/: ids.py  text.py  time.py
backend/app/workers/: processing_worker.py  retry_policy.py
backend/app/workflows/: __init__.py  dedup.py  graph.py  nodes.py  state.py
backend/scripts/: seed_test_data.py
(+102 files in other folders)
